bootstrap.peg.go
package main

import (
	"bytes"
	"fmt"
	"os"
	"sort"
	"strconv"
)

/* The rule types inferred from the grammar are below. */
type Rule uint8

const (
	RuleUnknown Rule = iota
	RuleGrammar
	RuleDefinition
	RuleExpression
	RuleSequence
	RulePrefix
	RuleSuffix
	RulePrimary
	RuleIdentifier
	RuleIdentStart
	RuleIdentCont
	RuleLiteral
	RuleClass
	RuleRanges
	RuleRange
	RuleChar
	RuleLeftArrow
	RuleSlash
	RuleAnd
	RuleNot
	RuleQuestion
	RuleStar
	RulePlus
	RuleOpen
	RuleClose
	RuleDot
	RuleSpacing
	RuleComment
	RuleSpace
	RuleEndOfLine
	RuleEndOfFile
	RuleAction
	RuleBegin
	RuleEnd
)

var Rul3s = [...]string{
	"Unknown",
	"Grammar",
	"Definition",
	"Expression",
	"Sequence",
	"Prefix",
	"Suffix",
	"Primary",
	"Identifier",
	"IdentStart",
	"IdentCont",
	"Literal",
	"Class",
	"Ranges",
	"Range",
	"Char",
	"LeftArrow",
	"Slash",
	"And",
	"Not",
	"Question",
	"Star",
	"Plus",
	"Open",
	"Close",
	"Dot",
	"Spacing",
	"Comment",
	"Space",
	"EndOfLine",
	"EndOfFile",
	"Action",
	"Begin",
	"End",
}

type TokenTree interface {
	sort.Interface
	Prepare()
	Add(rule Rule, begin, end, next int)
	Expand(index int) TokenTree
	Stack() []token32
	Tokens() <-chan token32
}


/* 16 bit structure for abstract syntax tree */
type token16 struct {
	Rule
	begin, end, next int16
}

func (t *token16) isZero() bool {
	return t.Rule == RuleUnknown && t.begin == 0 && t.end == 0 && t.next == 0
}

type tokens16 struct {
	tree      []token16
	stackSize int32
}

func (t *tokens16) Len() int {
	return len(t.tree)
}

func (t *tokens16) Less(i, j int) bool {
	ii, jj := t.tree[i], t.tree[j]
	if ii.Rule != RuleUnknown {
		if jj.Rule == RuleUnknown {
			return true
		} else if ii.begin < jj.begin {
			return true
		} else if ii.begin == jj.begin {
			if ii.end == ii.begin || jj.end == jj.begin {
				if ii.next < jj.next {
					return true
				}
			} else if ii.end > jj.end {
				return true
			} else if ii.end == jj.end {
				if ii.next > jj.next {
					return true
				}
			}
		}
	}
	return false
}

func (t *tokens16) Swap(i, j int) {
	t.tree[i], t.tree[j] = t.tree[j], t.tree[i]
}

func (t *tokens16) Prepare() {
	sort.Sort(t)
	size := int(t.tree[0].next) + 1

	tree, stack, top := t.tree[0:size], make([]token16, size), -1
	for i, token := range tree {
		token.next = int16(i)
		for top >= 0 && token.begin >= stack[top].end {
			tree[stack[top].next].next, top = token.next, top-1
		}
		stack[top+1], top = token, top+1
	}

	for i, token := range stack {
		if token.isZero() {
			t.stackSize = int32(i)
			break
		}
	}

	t.tree = tree
}

func (t *tokens16) Add(rule Rule, begin, end, next int) {
	t.tree[next] = token16{Rule: rule, begin: int16(begin), end: int16(end), next: int16(next)}
}

func (t *tokens16) Stack() []token32 {
	if t.stackSize == 0 {
		t.Prepare()
	}
	return make([]token32, t.stackSize)
}

func (t *tokens16) Tokens() <-chan token32 {
	s := make(chan token32, 16)
	go func() {
		for _, v := range t.tree {
			s <- token32{Rule: v.Rule, begin: int32(v.begin), end: int32(v.end), next: int32(v.next)}
		}
		close(s)
	}()
	return s
}

/* 32 bit structure for abstract syntax tree */
type token32 struct {
	Rule
	begin, end, next int32
}

func (t *token32) isZero() bool {
	return t.Rule == RuleUnknown && t.begin == 0 && t.end == 0 && t.next == 0
}

type tokens32 struct {
	tree      []token32
	stackSize int32
}

func (t *tokens32) Len() int {
	return len(t.tree)
}

func (t *tokens32) Less(i, j int) bool {
	ii, jj := t.tree[i], t.tree[j]
	if ii.Rule != RuleUnknown {
		if jj.Rule == RuleUnknown {
			return true
		} else if ii.begin < jj.begin {
			return true
		} else if ii.begin == jj.begin {
			if ii.end == ii.begin || jj.end == jj.begin {
				if ii.next < jj.next {
					return true
				}
			} else if ii.end > jj.end {
				return true
			} else if ii.end == jj.end {
				if ii.next > jj.next {
					return true
				}
			}
		}
	}
	return false
}

func (t *tokens32) Swap(i, j int) {
	t.tree[i], t.tree[j] = t.tree[j], t.tree[i]
}

func (t *tokens32) Prepare() {
	sort.Sort(t)
	size := int(t.tree[0].next) + 1

	tree, stack, top := t.tree[0:size], make([]token32, size), -1
	for i, token := range tree {
		token.next = int32(i)
		for top >= 0 && token.begin >= stack[top].end {
			tree[stack[top].next].next, top = token.next, top-1
		}
		stack[top+1], top = token, top+1
	}

	for i, token := range stack {
		if token.isZero() {
			t.stackSize = int32(i)
			break
		}
	}

	t.tree = tree
}

func (t *tokens32) Add(rule Rule, begin, end, next int) {
	t.tree[next] = token32{Rule: rule, begin: int32(begin), end: int32(end), next: int32(next)}
}

func (t *tokens32) Stack() []token32 {
	if t.stackSize == 0 {
		t.Prepare()
	}
	return make([]token32, t.stackSize)
}

func (t *tokens32) Tokens() <-chan token32 {
	s := make(chan token32, 16)
	go func() {
		for _, v := range t.tree {
			s <- token32{Rule: v.Rule, begin: int32(v.begin), end: int32(v.end), next: int32(v.next)}
		}
		close(s)
	}()
	return s
}

func (t *tokens16) Expand(index int) TokenTree {
	tree := t.tree
	if index >= len(tree) {
		expanded := make([]token32, 2*len(tree))
		for i, v := range tree {
			e := &expanded[i]
			e.Rule, e.begin, e.end, e.next = v.Rule, int32(v.begin), int32(v.end), int32(v.next)
		}
		return &tokens32{tree: expanded}
	}
	return nil
}

func (t *tokens32) Expand(index int) TokenTree {
	tree := t.tree
	if index >= len(tree) {
		expanded := make([]token32, 2*len(tree))
		copy(expanded, tree)
		t.tree = expanded
	}
	return nil
}

type Peg struct {
	*Tree

	Buffer   string
	Min, Max int
	rules    [33]func() bool

	TokenTree
}

func (p *Peg) Add(rule Rule, begin, end, next int) {
	if tree := p.TokenTree.Expand(next); tree != nil {
		p.TokenTree = tree
	}
	p.TokenTree.Add(rule, begin, end, next)
}

func (p *Peg) Parse() os.Error {
	if p.rules[0]() {
		return nil
	}
	return &parseError{p}
}

type parseError struct {
	p *Peg
}

func (e *parseError) String() string {
	buf, line, character := new(bytes.Buffer), 1, 0

	for i, c := range e.p.Buffer[0:] {
		if c == '\n' {
			line++
			character = 0
		} else {
			character++
		}

		if i == e.p.Min {
			if e.p.Min != e.p.Max {
				fmt.Fprintf(buf, "parse error after line %v character %v\n", line, character)
			} else {
				break
			}
		} else if i == e.p.Max {
			break
		}
	}

	fmt.Fprintf(buf, "parse error: unexpected ")
	if e.p.Max >= len(e.p.Buffer) {
		fmt.Fprintf(buf, "end of file found\n")
	} else {
		fmt.Fprintf(buf, "'%c' at line %v character %v\n", e.p.Buffer[e.p.Max], line, character)
	}

	return buf.String()
}

func (p *Peg) PrintSyntaxTree() {
	tokenTree := p.TokenTree
	stack, top, i := tokenTree.Stack(), -1, 0
	for token := range tokenTree.Tokens() {
		if top >= 0 && int(stack[top].next) == i {
			for top >= 0 && int(stack[top].next) == i {
				top--
			}
		}
		stack[top+1], top, i = token, top+1, i+1

		for c := 0; c < top; c++ {
			fmt.Printf(" ")
		}
		fmt.Printf("\x1B[34m%v\x1B[m %v\n", Rul3s[token.Rule], strconv.Quote(p.Buffer[token.begin:token.end]))
	}
}

func (p *Peg) Highlighter() {
	tokenTree := p.TokenTree
	stack, top, i, c := tokenTree.Stack(), -1, 0, 0
	for token := range tokenTree.Tokens() {
		pops := top
		if top >= 0 && int(stack[top].next) == i {
			for top >= 0 && int(stack[top].next) == i {
				top--
			}

			for c < int(stack[pops].end) {
				fmt.Printf("%v", c)
				for t := 0; t <= pops; t++ {
					if c >= int(stack[t].begin) && c < int(stack[t].end) {
						fmt.Printf(" \x1B[34m%v\x1B[m", Rul3s[stack[t].Rule])
					}
				}
				fmt.Printf("\n")
				c++
			}
		}
		stack[top+1], top, i = token, top+1, i+1
	}
}

func (p *Peg) Init() {
	position, tokenIndex := 0, 0
	p.TokenTree = &tokens16{tree: make([]token16, 65536)}

	actions := [...]func(buffer string, begin, end int){
		/* 0 */
		func(buffer string, begin, end int) {
			p.AddAlternate()
		},
		/* 1 */
		func(buffer string, begin, end int) {
			p.AddPackage(buffer[begin:end])
		},
		/* 2 */
		func(buffer string, begin, end int) {
			p.AddPeg(buffer[begin:end])
		},
		/* 3 */
		func(buffer string, begin, end int) {
			p.AddState(buffer[begin:end])
		},
		/* 4 */
		func(buffer string, begin, end int) {
			p.AddPredicate(buffer[begin:end])
		},
		/* 5 */
		func(buffer string, begin, end int) {
			p.AddPeekFor()
		},
		/* 6 */
		func(buffer string, begin, end int) {
			p.AddPeekNot()
		},
		/* 7 */
		func(buffer string, begin, end int) {
			p.AddCharacter("\a")
		},
		/* 8 */
		func(buffer string, begin, end int) {
			p.AddCharacter("\b")
		},
		/* 9 */
		func(buffer string, begin, end int) {
			p.AddCharacter("\x1B")
		},
		/* 10 */
		func(buffer string, begin, end int) {
			p.AddCharacter("\f")
		},
		/* 11 */
		func(buffer string, begin, end int) {
			p.AddCharacter("\n")
		},
		/* 12 */
		func(buffer string, begin, end int) {
			p.AddCharacter("\r")
		},
		/* 13 */
		func(buffer string, begin, end int) {
			p.AddCharacter("\t")
		},
		/* 14 */
		func(buffer string, begin, end int) {
			p.AddCharacter("\v")
		},
		/* 15 */
		func(buffer string, begin, end int) {
			p.AddCharacter("'")
		},
		/* 16 */
		func(buffer string, begin, end int) {
			p.AddCharacter("\"")
		},
		/* 17 */
		func(buffer string, begin, end int) {
			p.AddCharacter("[")
		},
		/* 18 */
		func(buffer string, begin, end int) {
			p.AddCharacter("]")
		},
		/* 19 */
		func(buffer string, begin, end int) {
			p.AddCharacter("-")
		},
		/* 20 */
		func(buffer string, begin, end int) {
			p.AddOctalCharacter(buffer[begin:end])
		},
		/* 21 */
		func(buffer string, begin, end int) {
			p.AddOctalCharacter(buffer[begin:end])
		},
		/* 22 */
		func(buffer string, begin, end int) {
			p.AddCharacter("\\")
		},
		/* 23 */
		func(buffer string, begin, end int) {
			p.AddCharacter(buffer[begin:end])
		},
		/* 24 */
		func(buffer string, begin, end int) {
			p.AddPeekNot()
			p.AddDot()
			p.AddSequence()
		},
		/* 25 */
		func(buffer string, begin, end int) {
			p.AddSequence()
		},
		/* 26 */
		func(buffer string, begin, end int) {
			p.AddSequence()
		},
		/* 27 */
		func(buffer string, begin, end int) {
			p.AddAlternate()
		},
		/* 28 */
		func(buffer string, begin, end int) {
			p.AddNil()
			p.AddAlternate()
		},
		/* 29 */
		func(buffer string, begin, end int) {
			p.AddNil()
		},
		/* 30 */
		func(buffer string, begin, end int) {
			p.AddQuery()
		},
		/* 31 */
		func(buffer string, begin, end int) {
			p.AddStar()
		},
		/* 32 */
		func(buffer string, begin, end int) {
			p.AddPlus()
		},
		/* 33 */
		func(buffer string, begin, end int) {
			p.AddRule(buffer[begin:end])
		},
		/* 34 */
		func(buffer string, begin, end int) {
			p.AddExpression()
		},
		/* 35 */
		func(buffer string, begin, end int) {
			p.AddRange()
		},
		/* 36 */
		func(buffer string, begin, end int) {
			p.AddCommit()
		},
		/* 37 */
		func(buffer string, begin, end int) {
			p.AddName(buffer[begin:end])
		},
		/* 38 */
		func(buffer string, begin, end int) {
			p.AddDot()
		},
		/* 39 */
		func(buffer string, begin, end int) {
			p.AddAction(buffer[begin:end])
		},
		/* 40 */
		func(buffer string, begin, end int) {
			p.AddPush()
		},
		/* 41 */
		func(buffer string, begin, end int) {
			p.AddSequence()
		},
	}

	var thunkPosition, begin, end int
	thunks := make([]struct {
		action     uint8
		begin, end int
	}, 32)
	do := func(action uint8) {
		if thunkPosition == len(thunks) {
			newThunks := make([]struct {
				action     uint8
				begin, end int
			}, 2*len(thunks))
			copy(newThunks, thunks)
			thunks = newThunks
		}
		thunks[thunkPosition].action = action
		thunks[thunkPosition].begin = begin
		thunks[thunkPosition].end = end
		thunkPosition++
	}

	commit := func(thunkPosition0 int) bool {
		if thunkPosition0 == 0 {
			for thunk := 0; thunk < thunkPosition; thunk++ {
				actions[thunks[thunk].action](p.Buffer, thunks[thunk].begin, thunks[thunk].end)
			}
			p.Min = position
			thunkPosition = 0
			return true
		}
		return false
	}

	matchDot := func() bool {
		if position < len(p.Buffer) {
			position++
			return true
		} else if position >= p.Max {
			p.Max = position
		}
		return false
	}

	matchChar := func(c byte) bool {
		if (position < len(p.Buffer)) && (p.Buffer[position] == c) {
			position++
			return true
		} else if position >= p.Max {
			p.Max = position
		}
		return false
	}

	matchRange := func(lower byte, upper byte) bool {
		if (position < len(p.Buffer)) && (p.Buffer[position] >= lower) && (p.Buffer[position] <= upper) {
			position++
			return true
		} else if position >= p.Max {
			p.Max = position
		}
		return false
	}

	p.rules = [...]func() bool{
		/* 0 Grammar <- <(Spacing ('p' 'a' 'c' 'k' 'a' 'g' 'e') Spacing Identifier { p.AddPackage(buffer[begin:end]) } ('t' 'y' 'p' 'e') Spacing Identifier { p.AddPeg(buffer[begin:end]) } ('P' 'e' 'g') Spacing Action { p.AddState(buffer[begin:end]) } commit Definition+ EndOfFile)> */
		func() bool {
			position0, tokenIndex0, thunkPosition0 := position, tokenIndex, thunkPosition
			{
				begin1 := position
				if !p.rules[25]() {
					goto l0
				}
				if !matchChar('p') {
					goto l0
				}
				if !matchChar('a') {
					goto l0
				}
				if !matchChar('c') {
					goto l0
				}
				if !matchChar('k') {
					goto l0
				}
				if !matchChar('a') {
					goto l0
				}
				if !matchChar('g') {
					goto l0
				}
				if !matchChar('e') {
					goto l0
				}
				if !p.rules[25]() {
					goto l0
				}
				if !p.rules[7]() {
					goto l0
				}
				do(1)
				if !matchChar('t') {
					goto l0
				}
				if !matchChar('y') {
					goto l0
				}
				if !matchChar('p') {
					goto l0
				}
				if !matchChar('e') {
					goto l0
				}
				if !p.rules[25]() {
					goto l0
				}
				if !p.rules[7]() {
					goto l0
				}
				do(2)
				if !matchChar('P') {
					goto l0
				}
				if !matchChar('e') {
					goto l0
				}
				if !matchChar('g') {
					goto l0
				}
				if !p.rules[25]() {
					goto l0
				}
				if !p.rules[30]() {
					goto l0
				}
				do(3)
				if !(commit(0)) {
					goto l0
				}
				{
					begin4 := position
					if !p.rules[7]() {
						goto l0
					}
					do(33)
					if !p.rules[15]() {
						goto l0
					}
					if !p.rules[2]() {
						goto l0
					}
					do(34)
					{
						position5, tokenIndex5, thunkPosition5 := position, tokenIndex, thunkPosition
						{
							position6, tokenIndex6, thunkPosition6 := position, tokenIndex, thunkPosition
							if !p.rules[7]() {
								goto l7
							}
							if !p.rules[15]() {
								goto l7
							}
							goto l6
						l7:
							position, tokenIndex, thunkPosition = position6, tokenIndex6, thunkPosition6
							{
								position8, tokenIndex8, thunkPosition8 := position, tokenIndex, thunkPosition
								if !matchDot() {
									goto l8
								}
								goto l0
							l8:
								position, tokenIndex, thunkPosition = position8, tokenIndex8, thunkPosition8
							}
						}
					l6:
						position, tokenIndex, thunkPosition = position5, tokenIndex5, thunkPosition5
					}
					if !(commit(0)) {
						goto l0
					}
					p.Add(RuleDefinition, begin4, position, tokenIndex)
					tokenIndex++
				}
			l2:
				{
					position3, tokenIndex3, thunkPosition3 := position, tokenIndex, thunkPosition
					{
						begin9 := position
						if !p.rules[7]() {
							goto l3
						}
						do(33)
						if !p.rules[15]() {
							goto l3
						}
						if !p.rules[2]() {
							goto l3
						}
						do(34)
						{
							position10, tokenIndex10, thunkPosition10 := position, tokenIndex, thunkPosition
							{
								position11, tokenIndex11, thunkPosition11 := position, tokenIndex, thunkPosition
								if !p.rules[7]() {
									goto l12
								}
								if !p.rules[15]() {
									goto l12
								}
								goto l11
							l12:
								position, tokenIndex, thunkPosition = position11, tokenIndex11, thunkPosition11
								{
									position13, tokenIndex13, thunkPosition13 := position, tokenIndex, thunkPosition
									if !matchDot() {
										goto l13
									}
									goto l3
								l13:
									position, tokenIndex, thunkPosition = position13, tokenIndex13, thunkPosition13
								}
							}
						l11:
							position, tokenIndex, thunkPosition = position10, tokenIndex10, thunkPosition10
						}
						if !(commit(0)) {
							goto l3
						}
						p.Add(RuleDefinition, begin9, position, tokenIndex)
						tokenIndex++
					}
					goto l2
				l3:
					position, tokenIndex, thunkPosition = position3, tokenIndex3, thunkPosition3
				}
				{
					begin14 := position
					{
						position15, tokenIndex15, thunkPosition15 := position, tokenIndex, thunkPosition
						if !matchDot() {
							goto l15
						}
						goto l0
					l15:
						position, tokenIndex, thunkPosition = position15, tokenIndex15, thunkPosition15
					}
					p.Add(RuleEndOfFile, begin14, position, tokenIndex)
					tokenIndex++
				}
				p.Add(RuleGrammar, begin1, position, tokenIndex)
				tokenIndex++
			}
			return true
		l0:
			position, tokenIndex, thunkPosition = position0, tokenIndex0, thunkPosition0
			return false
		},
		/* 1 Definition <- <(Identifier { p.AddRule(buffer[begin:end]) } LeftArrow Expression { p.AddExpression() } &((Identifier LeftArrow) / !.) commit)> */
		nil,
		/* 2 Expression <- <((Sequence (Slash Sequence { p.AddAlternate() })* (Slash { p.AddNil(); p.AddAlternate() })?) / { p.AddNil() })> */
		func() bool {
			{
				begin18 := position
				{
					position19, tokenIndex19, thunkPosition19 := position, tokenIndex, thunkPosition
					if !p.rules[3]() {
						goto l20
					}
				l21:
					{
						position22, tokenIndex22, thunkPosition22 := position, tokenIndex, thunkPosition
						if !p.rules[16]() {
							goto l22
						}
						if !p.rules[3]() {
							goto l22
						}
						do(27)
						goto l21
					l22:
						position, tokenIndex, thunkPosition = position22, tokenIndex22, thunkPosition22
					}
					{
						position23, tokenIndex23, thunkPosition23 := position, tokenIndex, thunkPosition
						if !p.rules[16]() {
							goto l23
						}
						do(28)
						goto l24
					l23:
						position, tokenIndex, thunkPosition = position23, tokenIndex23, thunkPosition23
					}
				l24:
					goto l19
				l20:
					position, tokenIndex, thunkPosition = position19, tokenIndex19, thunkPosition19
					do(29)
				}
			l19:
				p.Add(RuleExpression, begin18, position, tokenIndex)
				tokenIndex++
			}
			return true
		},
		/* 3 Sequence <- <(Prefix (Prefix { p.AddSequence() })*)> */
		func() bool {
			position25, tokenIndex25, thunkPosition25 := position, tokenIndex, thunkPosition
			{
				begin26 := position
				if !p.rules[4]() {
					goto l25
				}
			l27:
				{
					position28, tokenIndex28, thunkPosition28 := position, tokenIndex, thunkPosition
					if !p.rules[4]() {
						goto l28
					}
					do(41)
					goto l27
				l28:
					position, tokenIndex, thunkPosition = position28, tokenIndex28, thunkPosition28
				}
				p.Add(RuleSequence, begin26, position, tokenIndex)
				tokenIndex++
			}
			return true
		l25:
			position, tokenIndex, thunkPosition = position25, tokenIndex25, thunkPosition25
			return false
		},
		/* 4 Prefix <- <((And Action { p.AddPredicate(buffer[begin:end]) }) / (And Suffix { p.AddPeekFor() }) / (Not Suffix { p.AddPeekNot() }) / Suffix)> */
		func() bool {
			position29, tokenIndex29, thunkPosition29 := position, tokenIndex, thunkPosition
			{
				begin30 := position
				{
					position31, tokenIndex31, thunkPosition31 := position, tokenIndex, thunkPosition
					if !p.rules[17]() {
						goto l32
					}
					if !p.rules[30]() {
						goto l32
					}
					do(4)
					goto l31
				l32:
					position, tokenIndex, thunkPosition = position31, tokenIndex31, thunkPosition31
					if !p.rules[17]() {
						goto l33
					}
					if !p.rules[5]() {
						goto l33
					}
					do(5)
					goto l31
				l33:
					position, tokenIndex, thunkPosition = position31, tokenIndex31, thunkPosition31
					{
						begin35 := position
						if !matchChar('!') {
							goto l34
						}
						if !p.rules[25]() {
							goto l34
						}
						p.Add(RuleNot, begin35, position, tokenIndex)
						tokenIndex++
					}
					if !p.rules[5]() {
						goto l34
					}
					do(6)
					goto l31
				l34:
					position, tokenIndex, thunkPosition = position31, tokenIndex31, thunkPosition31
					if !p.rules[5]() {
						goto l29
					}
				}
			l31:
				p.Add(RulePrefix, begin30, position, tokenIndex)
				tokenIndex++
			}
			return true
		l29:
			position, tokenIndex, thunkPosition = position29, tokenIndex29, thunkPosition29
			return false
		},
		/* 5 Suffix <- <(Primary ((Question { p.AddQuery() }) / (Star { p.AddStar() }) / (Plus { p.AddPlus() }))?)> */
		func() bool {
			position36, tokenIndex36, thunkPosition36 := position, tokenIndex, thunkPosition
			{
				begin37 := position
				{
					begin38 := position
					{
						position39, tokenIndex39, thunkPosition39 := position, tokenIndex, thunkPosition
						if !matchChar('c') {
							goto l40
						}
						if !matchChar('o') {
							goto l40
						}
						if !matchChar('m') {
							goto l40
						}
						if !matchChar('m') {
							goto l40
						}
						if !matchChar('i') {
							goto l40
						}
						if !matchChar('t') {
							goto l40
						}
						if !p.rules[25]() {
							goto l40
						}
						do(36)
						goto l39
					l40:
						position, tokenIndex, thunkPosition = position39, tokenIndex39, thunkPosition39
						if !p.rules[7]() {
							goto l41
						}
						{
							position42, tokenIndex42, thunkPosition42 := position, tokenIndex, thunkPosition
							if !p.rules[15]() {
								goto l42
							}
							goto l41
						l42:
							position, tokenIndex, thunkPosition = position42, tokenIndex42, thunkPosition42
						}
						do(37)
						goto l39
					l41:
						position, tokenIndex, thunkPosition = position39, tokenIndex39, thunkPosition39
						{
							begin44 := position
							if !matchChar('(') {
								goto l43
							}
							if !p.rules[25]() {
								goto l43
							}
							p.Add(RuleOpen, begin44, position, tokenIndex)
							tokenIndex++
						}
						if !p.rules[2]() {
							goto l43
						}
						{
							begin45 := position
							if !matchChar(')') {
								goto l43
							}
							if !p.rules[25]() {
								goto l43
							}
							p.Add(RuleClose, begin45, position, tokenIndex)
							tokenIndex++
						}
						goto l39
					l43:
						position, tokenIndex, thunkPosition = position39, tokenIndex39, thunkPosition39
						{
							begin47 := position
							{
								position48, tokenIndex48, thunkPosition48 := position, tokenIndex, thunkPosition
								if !matchChar('\'') {
									goto l49
								}
								{
									position50, tokenIndex50, thunkPosition50 := position, tokenIndex, thunkPosition
									{
										position52, tokenIndex52, thunkPosition52 := position, tokenIndex, thunkPosition
										if !matchChar('\'') {
											goto l52
										}
										goto l50
									l52:
										position, tokenIndex, thunkPosition = position52, tokenIndex52, thunkPosition52
									}
									if !p.rules[14]() {
										goto l50
									}
									goto l51
								l50:
									position, tokenIndex, thunkPosition = position50, tokenIndex50, thunkPosition50
								}
							l51:
							l53:
								{
									position54, tokenIndex54, thunkPosition54 := position, tokenIndex, thunkPosition
									{
										position55, tokenIndex55, thunkPosition55 := position, tokenIndex, thunkPosition
										if !matchChar('\'') {
											goto l55
										}
										goto l54
									l55:
										position, tokenIndex, thunkPosition = position55, tokenIndex55, thunkPosition55
									}
									if !p.rules[14]() {
										goto l54
									}
									do(25)
									goto l53
								l54:
									position, tokenIndex, thunkPosition = position54, tokenIndex54, thunkPosition54
								}
								if !matchChar('\'') {
									goto l49
								}
								if !p.rules[25]() {
									goto l49
								}
								goto l48
							l49:
								position, tokenIndex, thunkPosition = position48, tokenIndex48, thunkPosition48
								if !matchChar('"') {
									goto l46
								}
								{
									position56, tokenIndex56, thunkPosition56 := position, tokenIndex, thunkPosition
									{
										position58, tokenIndex58, thunkPosition58 := position, tokenIndex, thunkPosition
										if !matchChar('"') {
											goto l58
										}
										goto l56
									l58:
										position, tokenIndex, thunkPosition = position58, tokenIndex58, thunkPosition58
									}
									if !p.rules[14]() {
										goto l56
									}
									goto l57
								l56:
									position, tokenIndex, thunkPosition = position56, tokenIndex56, thunkPosition56
								}
							l57:
							l59:
								{
									position60, tokenIndex60, thunkPosition60 := position, tokenIndex, thunkPosition
									{
										position61, tokenIndex61, thunkPosition61 := position, tokenIndex, thunkPosition
										if !matchChar('"') {
											goto l61
										}
										goto l60
									l61:
										position, tokenIndex, thunkPosition = position61, tokenIndex61, thunkPosition61
									}
									if !p.rules[14]() {
										goto l60
									}
									do(26)
									goto l59
								l60:
									position, tokenIndex, thunkPosition = position60, tokenIndex60, thunkPosition60
								}
								if !matchChar('"') {
									goto l46
								}
								if !p.rules[25]() {
									goto l46
								}
							}
						l48:
							p.Add(RuleLiteral, begin47, position, tokenIndex)
							tokenIndex++
						}
						goto l39
					l46:
						position, tokenIndex, thunkPosition = position39, tokenIndex39, thunkPosition39
						{
							begin63 := position
							if !matchChar('[') {
								goto l62
							}
							{
								position64, tokenIndex64, thunkPosition64 := position, tokenIndex, thunkPosition
								{
									position66, tokenIndex66, thunkPosition66 := position, tokenIndex, thunkPosition
									if !matchChar('^') {
										goto l67
									}
									if !p.rules[12]() {
										goto l67
									}
									do(24)
									goto l66
								l67:
									position, tokenIndex, thunkPosition = position66, tokenIndex66, thunkPosition66
									if !p.rules[12]() {
										goto l64
									}
								}
							l66:
								goto l65
							l64:
								position, tokenIndex, thunkPosition = position64, tokenIndex64, thunkPosition64
							}
						l65:
							if !matchChar(']') {
								goto l62
							}
							if !p.rules[25]() {
								goto l62
							}
							p.Add(RuleClass, begin63, position, tokenIndex)
							tokenIndex++
						}
						goto l39
					l62:
						position, tokenIndex, thunkPosition = position39, tokenIndex39, thunkPosition39
						{
							begin69 := position
							if !matchChar('.') {
								goto l68
							}
							if !p.rules[25]() {
								goto l68
							}
							p.Add(RuleDot, begin69, position, tokenIndex)
							tokenIndex++
						}
						do(38)
						goto l39
					l68:
						position, tokenIndex, thunkPosition = position39, tokenIndex39, thunkPosition39
						if !p.rules[30]() {
							goto l70
						}
						do(39)
						goto l39
					l70:
						position, tokenIndex, thunkPosition = position39, tokenIndex39, thunkPosition39
						{
							begin71 := position
							if !matchChar('<') {
								goto l36
							}
							if !p.rules[25]() {
								goto l36
							}
							p.Add(RuleBegin, begin71, position, tokenIndex)
							tokenIndex++
						}
						if !p.rules[2]() {
							goto l36
						}
						{
							begin72 := position
							if !matchChar('>') {
								goto l36
							}
							if !p.rules[25]() {
								goto l36
							}
							p.Add(RuleEnd, begin72, position, tokenIndex)
							tokenIndex++
						}
						do(40)
					}
				l39:
					p.Add(RulePrimary, begin38, position, tokenIndex)
					tokenIndex++
				}
				{
					position73, tokenIndex73, thunkPosition73 := position, tokenIndex, thunkPosition
					{
						position75, tokenIndex75, thunkPosition75 := position, tokenIndex, thunkPosition
						{
							begin77 := position
							if !matchChar('?') {
								goto l76
							}
							if !p.rules[25]() {
								goto l76
							}
							p.Add(RuleQuestion, begin77, position, tokenIndex)
							tokenIndex++
						}
						do(30)
						goto l75
					l76:
						position, tokenIndex, thunkPosition = position75, tokenIndex75, thunkPosition75
						{
							begin79 := position
							if !matchChar('*') {
								goto l78
							}
							if !p.rules[25]() {
								goto l78
							}
							p.Add(RuleStar, begin79, position, tokenIndex)
							tokenIndex++
						}
						do(31)
						goto l75
					l78:
						position, tokenIndex, thunkPosition = position75, tokenIndex75, thunkPosition75
						{
							begin80 := position
							if !matchChar('+') {
								goto l73
							}
							if !p.rules[25]() {
								goto l73
							}
